fix top bar if it is too wide

--- a/plugins/Zeitgeist/stylesheets/ui/_header.less
+++ b/plugins/Zeitgeist/stylesheets/ui/_header.less
@@ -31,7 +31,9 @@
 }
 
 #topBars {
-  float: right;
+  right: 0px;
+  position: absolute;
+  padding-left: 110px;
   color: #9c9c9c;
   margin: 4px 0 8px;
   font-size: 13px;
